--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -696,3 +696,36 @@ button{
 		font-size: 12px;
 	}
 }
+
+#CriticalLogpage{
+	text-align:center;
+	padding-left:50px;
+	padding-right:50px;
+	padding-top:100px;
+	
+}
+
+#CriticalLogpage h2, #CriticalLogpage h1 {
+	text-decoration: underline;
+	font-weight: bold;
+	font-size: 28px;
+}
+
+#CriticalLogpage h3{
+	text-decoration: underline;
+	font-weight: bold;
+}
+
+
+#CriticalLogpage img{
+	max-height:400px;
+}
+
+#Demo iframe{
+	height:70%;
+	width:70%;
+	max-height:600px;
+	top:10%;
+	left: 15%;
+	position: absolute;
+}
